--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1186,7 +1186,17 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# Einsatzbereich (Lucas)"
+        "# Einsatzbereich"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Der Adam Optimierer wurde entwickelt, um neurale Netzwerke zu trainieren [Bushaev, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c). Adam kann zum Beispiel dafür verwendet werden, um Pixeländerungen an Bildern durchzuführen, ohne den Hashwert zu verändern. Struppek et al. [Struppek et al., 2022, S. 6f](https://arxiv.org/pdf/2111.06628.pdf) konten zeigen, das mit Adam Hash Kollisionen forciert oder vermieden werden können. Dadurch ist es unter anderem möglich kleine Änderungen an den Pixeln von Bildern vorzunehmen, ohne den Hash-Wert zu ändern. Apple verwendet den Hash-Wert von Bildern um Kinderpornografie in Bildern von Nutzern der iCloud zu identifizieren. Mit Hilfe von Optimierern, wie Adam, können Bilder manipuliert und Personen belastende Bilder untergeschoben werden, deren Hash-Wert mit einem Hash-Wert aus einer Child Sexual Abuse Material (CSAM) **Abkürzung übernehmen** Datenbank übereinstimmt [Struppek et al., 2022, S. 1](https://arxiv.org/pdf/2111.06628.pdf).\n",
+        "\n",
+        "Jais et al. [Jais et al., 2019, S. 1](http://journal2.um.ac.id/index.php/keds/article/view/6775/0) konnten zeigen, das Adam in tiefen und weiten neuronalen Netzwerken verwendet werden, um deren Leistung zu verbessern. Als Grundlage für das tiefe und weite neuronale Netzwerk wurden Daten zu Brustkrebs verwendet. Diese wurden korelliert, um Muster im Datensatz zu erkennen. Daraufhin wurde mit den Daten das tiefe und weite neuronale Netzwerk trainiert. Der Trainingsprozess wurde mit Adam optimiert [Jais et al., 2019, S. 43f.](http://journal2.um.ac.id/index.php/keds/article/view/6775/0)."
       ]
     },
     {
@@ -1968,6 +1978,87 @@
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Source:</td>\n",
         "    <td class=\"tg-swfa\"><a href=\"https://arxiv.org/abs/1712.07628\" target=\"_blank\" rel=\"noopener noreferrer\">https://arxiv.org/abs/1712.07628</a></td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
+        "    <td class=\"tg-zv4m\">14. Dezember 2022</td>\n",
+        "  </tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "18. <style type=\"text/css\">\n",
+        ".tg  {border-collapse:collapse;border-spacing:0;}\n",
+        ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  font-weight:normal;overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg .tg-zv4m{border-color:#ffffff;text-align:left;vertical-align:top}\n",
+        ".tg .tg-swfa{border-color:#ffffff;color:#0055ff;text-align:left;vertical-align:top}\n",
+        "</style>\n",
+        "<table class=\"tg\">\n",
+        "<tbody>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Title:</td>\n",
+        "    <td class=\"tg-zv4m\">Learning to Break Deep Perceptual Hashing: The Use Case NeuralHash</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Authors:</td>\n",
+        "    <td class=\"tg-zv4m\">Lukas Struppek, Dominik Hintersdorf, Daniel Neider, Kristian Kersting\n",
+        "</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Date:</td>\n",
+        "    <td class=\"tg-zv4m\">9. Juni 2022</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Source:</td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"https://arxiv.org/pdf/2111.06628.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">https://arxiv.org/pdf/2111.06628.pdf</a></td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
+        "    <td class=\"tg-zv4m\">14. Dezember 2022</td>\n",
+        "  </tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "19. <style type=\"text/css\">\n",
+        ".tg  {border-collapse:collapse;border-spacing:0;}\n",
+        ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  font-weight:normal;overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg .tg-zv4m{border-color:#ffffff;text-align:left;vertical-align:top}\n",
+        ".tg .tg-swfa{border-color:#ffffff;color:#0055ff;text-align:left;vertical-align:top}\n",
+        "</style>\n",
+        "<table class=\"tg\">\n",
+        "<tbody>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Title:</td>\n",
+        "    <td class=\"tg-zv4m\">Adam Optimization Algorithm for Wide and Deep Neural Network</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Authors:</td>\n",
+        "    <td class=\"tg-zv4m\">Imran Khan Mohd Jais, Amelia Ritahani Ismail, Syed Qamrun Nisa</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Date:</td>\n",
+        "    <td class=\"tg-zv4m\">23. Juni 2019</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Source:</td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"http://journal2.um.ac.id/index.php/keds/article/view/6775/0\" target=\"_blank\" rel=\"noopener noreferrer\">http://journal2.um.ac.id/index.php/keds/article/view/6775/0</a></td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
