--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -134,8 +134,9 @@
         "| Abkürzung | Bedeutung          |\n",
         "|-----------|--------------------|\n",
         "| p         | Wahrscheinlichkeit |\n",
-        "|           |                    |\n",
-        "|           |                    |\n"
+        "| CSAM      | Child Sexual Abuse Material|\n",
+        "| MQA       | Mittlere Quadratische Abweichung|\n",
+        "| SGD       | Stochatische Gradientenabstieg|\n"
       ]
     },
     {
@@ -145,7 +146,8 @@
       "source": [
         "# Optimierer und ihre Verwendungszwecke\n",
         "Bevor die Funktionsweise von Optimierern im Detail erläutert wird, werden zwei mit Optimierern zusammenhänge Begriffe, Verlustfunktion und Machine Learning Modell, definiert.\n",
-        "\n"
+        "\n",
+        "[@]\n"
       ]
     },
     {
@@ -320,7 +322,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Die Implementierung basiert auf einem Beispiel von [Enoch Kan, 2020](https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc) Das Beispiel verwendet nur die Biblliotheken numpy und math.\n",
+        "Im Folgenden wird eine Beispielimplementierung in Python beschrieben. Die Implementierung basiert auf einem Beispiel von [Enoch Kan, 2020](https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc). Das Beispiel verwendet die Biblliotheken numpy und math.\n",
         "\n",
         "Um den Adam Algorithmus zu initialisieren müssen einige Variablen definiert werden:\n",
         "\n",
@@ -1194,9 +1196,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Der Adam Optimierer wurde entwickelt, um den Lernprozess neuronaler Netzwerke zu optimieren [Bushaev, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c). Adam kann zum Beispiel dafür verwendet werden, um Pixeländerungen an Bildern durchzuführen, ohne den Hashwert zu verändern. Struppek et al. [Struppek et al., 2022, S. 6f](https://arxiv.org/pdf/2111.06628.pdf) konten zeigen, das mit Adam Hash Kollisionen forciert oder vermieden werden können. Dadurch ist es unter anderem möglich kleine Änderungen an den Pixeln von Bildern vorzunehmen, ohne den Hash-Wert zu ändern. Apple verwendet den Hash-Wert von Bildern um Kinderpornografie in Bildern von Nutzern der iCloud zu identifizieren. Mit Hilfe von Optimierern, wie Adam, können Bilder manipuliert und Personen belastende Bilder untergeschoben werden, deren Hash-Wert mit einem Hash-Wert aus einer Child Sexual Abuse Material (CSAM) **Abkürzung übernehmen** Datenbank übereinstimmt [Struppek et al., 2022, S. 1](https://arxiv.org/pdf/2111.06628.pdf).\n",
+        "Der Adam Optimierer wurde entwickelt, um den Lernprozess neuronaler Netzwerke zu optimieren [Bushaev, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c). Adam kann zum Beispiel dafür verwendet werden, um Pixeländerungen an Bildern durchzuführen, ohne den Hashwert zu verändern. Struppek et al. [Struppek et al., 2022, S. 6f](https://arxiv.org/pdf/2111.06628.pdf) konten zeigen, das mit Adam Hash Kollisionen forciert oder vermieden werden können. Dadurch ist es unter anderem möglich kleine Änderungen an den Pixeln von Bildern vorzunehmen, ohne den Hash-Wert zu ändern. Apple verwendet den Hash-Wert von Bildern um Kinderpornografie in Bildern von Nutzern der iCloud zu identifizieren. Mit Hilfe von Optimierern, wie Adam, können Bildinformationen manipuliert und Personen belastende Bilder untergeschoben werden, deren Hash-Wert mit einem Hash-Wert aus einer Child Sexual Abuse Material (CSAM) Datenbank übereinstimmt [Struppek et al., 2022, S. 1](https://arxiv.org/pdf/2111.06628.pdf).\n",
         "\n",
-        "Jais et al. [Jais et al., 2019, S. 1](http://journal2.um.ac.id/index.php/keds/article/view/6775/0) konnten zeigen, das Adam in tiefen und weiten neuronalen Netzwerken verwendet werden, um deren Leistung zu verbessern. Als Grundlage für das tiefe und weite neuronale Netzwerk wurden Daten zu Brustkrebs verwendet. Diese wurden korelliert, um Muster im Datensatz zu erkennen. Daraufhin wurde mit den Daten das tiefe und weite neuronale Netzwerk trainiert. Der Trainingsprozess wurde mit Adam optimiert [Jais et al., 2019, S. 43f.](http://journal2.um.ac.id/index.php/keds/article/view/6775/0)."
+        "Jais et al. [Jais et al., 2019, S. 1](http://journal2.um.ac.id/index.php/keds/article/view/6775/0) konnten zeigen, das Adam in tiefen und weiten neuronalen Netzwerken verwendet werden kann, um deren Leistung zu verbessern. Als Grundlage für das tiefe und weite neuronale Netzwerk wurden Daten zu Brustkrebs verwendet. Diese wurden korelliert, um Muster im Datensatz zu erkennen. Daraufhin wurde mit den Daten das tiefe und weite neuronale Netzwerk trainiert. Der Trainingsprozess wurde mit Adam optimiert [Jais et al., 2019, S. 43f.](http://journal2.um.ac.id/index.php/keds/article/view/6775/0)."
       ]
     },
     {
