--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -144,6 +144,33 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "# Formelgrößen und Einheiten"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "| Abkürzung | Einheit | Bezeichnung  |\n",
+        "|-----------|---------|--------------|\n",
+        "| $\\alpha$  |         | Schrittgröße |\n",
+        "| $\\beta$  |         | Gewichtung neuer Werte gegenüber alter Werte |\n",
+        "| $\\beta_1$  |         | Mittelwert |\n",
+        "| $\\beta_2$  |         | zentrierte Varianz |\n",
+        "| $f$  |         | Funktion mit dem Parameter $\\theta$ |\n",
+        "| $m_0$  |         | Mittelwert des Gradienten |\n",
+        "| $v_0$  |         | unzentrierte Varianz des Gradienten |\n",
+        "| $\\delta$  |         | Gradient |\n",
+        "| $t$  | Zeiteinheit (beliebige Größe) | Zeit |\n",
+        "| $\\epsilon$  |         | Konstante |"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Optimierer und ihre Verwendungszwecke\n",
         "Bevor die Funktionsweise von Optimierern im Detail erläutert wird, werden zwei mit Optimierern zusammenhänge Begriffe, Verlustfunktion und Machine Learning Modell, definiert.\n",
         "\n"
@@ -246,7 +273,7 @@
       "metadata": {},
       "source": [
         "$\\beta$ = Gewichtung neuer Werte gegenüber älteren Werten (siehe Exponentially Weighted Moving Average, https://youtu.be/Vce8w1sy0e8?t=503) <br>\n",
-        "$\\alpha$ = Schrittweite\n",
+        "$\\alpha$ = Schrittweite<br>\n",
         "$f$ = Funktion mit dem Parameter $\\theta$<br>\n",
         "$m_0$ = Mittelwert des Gradienten <br>\n",
         "$v_0$ = Unzentrierte Varianz des Gradienten<br>\n",
