--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -272,7 +272,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "$\\beta$ = Gewichtung neuer Werte gegenüber älteren Werten (siehe Exponentially Weighted Moving Average, https://youtu.be/Vce8w1sy0e8?t=503) <br>\n",
+        "$\\beta$ = Gewichtung neuer Werte gegenüber älteren Werten ([Momentum Optimizerin Deep Learning, 2021, Exponentially Weighted Moving Average (2:53)](#q-coding-lane-mo-ewma))<br>\n",
         "$\\alpha$ = Schrittweite<br>\n",
         "$f$ = Funktion mit dem Parameter $\\theta$<br>\n",
         "$m_0$ = Mittelwert des Gradienten <br>\n",
@@ -300,7 +300,7 @@
         "Der Adam Optimierer ist eien Kombination des Momentum Optimierers sowie des RMSprop Optimierers. Diese sollten im Vorraus bekannt sein.\n",
         "Kurzum sind die beiden Optimierer Momentum und RMSprop aus vier mathematischen Formeln aufgebaut. Die Idee ist der Einsatz des Gradientenabstiegs, der zuvor in Kapitel \"Wie können Modelle optimiert werden?\" erklärt wird.\n",
         "\n",
-        "Momentum (siehe (CodingLane)[https://www.youtube.com/watch?v=Vce8w1sy0e8&ab_channel=CodingLane]):\n",
+        "Momentum ([Momentor Optimizer in Deep Learning, 2021](#q-coding-lane-mo-ewma)):\n",
         "1. $$ V_{dW}=\\beta*V_{dW_{prev}}+(1-\\beta)*dW $$\n",
         "2. $$ V_{dB}=\\beta*V_{dB_{prev}}+(1-\\beta)*dB $$\n",
         "3. $$ W=W - \\alpha*V_{dW} $$\n",
@@ -317,7 +317,7 @@
         "Visualisiert kann dies folgendermaßen dargestellt werden (dabei zeigt die rote Linie das Durchschnittsgewicht an jeder Stelle der Punkte an):\n",
         "![image.png](attachment:image-2.png)\n",
         "\n",
-        "RMSprop (siehe [CodingLane](https://www.youtube.com/watch?v=ajI_HTyaCu8&ab_channel=CodingLane)):\n",
+        "RMSprop ([RMSprop Optimizer Explained in Detail, 2021](#q-coding-lane-rmsprop)):\n",
         "1. $$ S_{dW}=\\beta*S_{dW_{prev}}+(1-\\beta)*(dW)^2 $$\n",
         "2. $$ S_{dB}=\\beta*S_{dB_{prev}}+(1-\\beta)*(dB)^2 $$\n",
         "3. $$ W=W-\\alpha*(\\frac{dW}{\\sqrt{S_{dW}+\\epsilon}}) $$\n",
@@ -1741,7 +1741,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "11. <style type=\"text/css\">\n",
+        "11. <a id=\"q-coding-lane-mo-ewma\" name=\"q-coding-lane-mo-ewma\"></a> <style type=\"text/css\">\n",
         ".tg  {border-collapse:collapse;border-spacing:0;}\n",
         ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
         "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
@@ -1781,7 +1781,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "12. <style type=\"text/css\">\n",
+        "12. <a id=\"q-coding-lane-rmsprop\" name=\"q-coding-lane-rmsprop\"></a> <style type=\"text/css\">\n",
         ".tg  {border-collapse:collapse;border-spacing:0;}\n",
         ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
         "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
