Updates all sources

--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1262,7 +1262,7 @@
         "\n",
         "Aber warum sprechen die genannten Punkte gegen den Einsatz des ADAM Optimierers? Gibt es weitere Details, die dafür sprechen, ADAM nicht einzusetzen?\n",
         "Im September 2019 wurde der Artikel \"A Bounded Scheduling Method for Adaptive Gradient Methods\" in China veröffentlicht. Darin werden Faktoren untersucht, die zu einer schlechten Leistung von ADAM beim Training komplexer neuronaler Netze führen.\n",
-        "Folgende Ergebnisse wurden notiert, die der Grund für eine schwache empirische Generalisierungsfähigkeit von ADAM sind: [Why should ADAM not be the default algorithm?](#q-kaur-2022), [Towards Theoretically Understanding Why SGD Generalizes Better Than ADAM in Deep Learning](#q-kaur-2022) [Why should ADAM not be the default algorithm?](https://pub.towardsai.net/why-adam-optimizer-should-not-be-the-default-learning-algorithm-a2b8d019eaa0);[Towards Theoretically Understanding Why SGD Generalizes Better Than ADAM in Deep Learning](https://panzhous.github.io/assets/pdf/2020-NIPS-SGD-poster.pdf)\n",
+        "Folgende Ergebnisse wurden notiert, die der Grund für eine schwache empirische Generalisierungsfähigkeit von ADAM sind: [Kaur, 2022](#q-kaur-2022), [Kaur, 2022, Poster, 2020-NIPS-SGD-poster](#q-kaur-2022)\n",
         "- **Ungleiche Skalierung der Gradienten**  \n",
         "  Das kann zur Folge haben, dass für adaptive Gradientenmethoden eine schlechte Generalisierungsleistung zustande kommt. SGD skaliert glechmäßiger und etwaige Trainingsfehler können besser verallgemeinert werden.\n",
         "- **Exponentiell gleitender Durchschnitt**  \n",
@@ -1272,14 +1272,14 @@
         "- **Unter Umständen stark steigende Lernrate**  \n",
         "  Tritt dieser Fall ein, so wirkt sich das stark auf die Leistung des Algorithmus aus.\n",
         "\n",
-        "Allerdings können die Grenzen von ADAM durch Einsatz der Strategie SWATS überwunden werden. Nitish Shirish Keskar und Richard Socher haben untersucht, wie die Generalisierungsleistung durch den Wechsel von ADAM zu SGD verbessert werden kann. [Bushaev, 2018, Problems with Adam](#q-bushaev-2018) [Problems with Adam, 2018](https://towardsdatascience.com/adam-latest-trends-in-deep-learning-optimization-6be9a291375c) Im dazugehörigen Paper wird die SWATS Strategie vorgestellt, was so viel bedeutet wie \"**Sw** from **A**dam **t**o **S**GD\". Das heißt, dass nur zu SGD gewechselt wird, wenn eine Bedingung eintritt. [Keskar et al., 2020](#q-keskar-et-al-2020) [Improving Generalization Performance by Switchin from Adam to SGD](https://arxiv.org/abs/1712.07628)\n",
+        "Allerdings können die Grenzen von ADAM durch Einsatz der Strategie SWATS überwunden werden. Nitish Shirish Keskar und Richard Socher haben untersucht, wie die Generalisierungsleistung durch den Wechsel von ADAM zu SGD verbessert werden kann [Bushaev, 2018, Problems with Adam](#q-bushaev-2018). Im dazugehörigen Paper wird die SWATS Strategie vorgestellt, was so viel bedeutet wie \"**Sw** from **A**dam **t**o **S**GD\". Das heißt, dass nur zu SGD gewechselt wird, wenn eine Bedingung eintritt [Keskar et al., 2020, S. 2ff](#q-keskar-et-al-2020).\n",
         "Die Bedingung ist folgendermaßen aufgebaut:\n",
         "$$\\left| \\frac{\\lambda_k}{1-\\beta_2^k}-\\gamma_k \\right| < \\epsilon,$$\n",
-        "Dabei wird der verzerrungskorrigierter exponentieller Mittelwert mit dem aktuellen Wert $\\gamma_k$ verglichen. Die Bias-Korrektur ist notwendig, um während dem Training zu verhindern, dass die Null-Initialisierung einen Einfluss hat. Wenn diese Bedingung erfüllt ist, wird die Lernrate von SGD mit $\\Lambda:=\\frac{\\lambda_k}{(1-\\beta_2^k)}$ gewählt [Keskar et al., 2020, S. 4f](#q-keskar-et-al-2020).[2.2 Switchover Point](https://arxiv.org/abs/1712.07628)\n",
+        "Dabei wird der verzerrungskorrigierter exponentieller Mittelwert mit dem aktuellen Wert $\\gamma_k$ verglichen. Die Bias-Korrektur ist notwendig, um während dem Training zu verhindern, dass die Null-Initialisierung einen Einfluss hat. Wenn diese Bedingung erfüllt ist, wird die Lernrate von SGD mit $\\Lambda:=\\frac{\\lambda_k}{(1-\\beta_2^k)}$ gewählt [Keskar et al., 2020, S. 4f](#q-keskar-et-al-2020).\n",
         "\n",
         "In nachfolgendem Diagramm ist zu sehen, wie sich der Switch zu SGD auswirkt, je nach fortgeschrittener Epoche.\n",
         "![image.png](attachment:image-2.png)  \n",
-        "Dabei wird vermehrt darauf hingewiesen, dass der Switch zum richtigen Zeitpunkt erfolgen muss. Wenn zu spät zu SGD gewechselt wird, erhält man ähnlich wie bei ADAM eine Generalisierungslücke. Ein früher Wechsel führt zu einer mit SGD vergleichbaren Testgenauigkeit [Keskar et al., 2020, S. 3f](#q-keskar-et-al-2020). [.1. Learning rate for SGD after the switch](https://arxiv.org/abs/1712.07628)"
+        "Dabei wird vermehrt darauf hingewiesen, dass der Switch zum richtigen Zeitpunkt erfolgen muss. Wenn zu spät zu SGD gewechselt wird, erhält man ähnlich wie bei ADAM eine Generalisierungslücke. Ein früher Wechsel führt zu einer mit SGD vergleichbaren Testgenauigkeit [Keskar et al., 2020, S. 3f](#q-keskar-et-al-2020)."
       ]
     },
     {
@@ -1301,12 +1301,12 @@
         "vSGD, AdaDelta und die natürliche Newton-Methode schätzen die Krümmung aus Informationen erster Ordnung und setzen anhand dieser Informationen die Schrittweite.\n",
         "Der SFO (Sum-of-Functions Optimierer) ist ein quasi-Newton-Verfahren, das auch Minibatches aufbaut. Im Gegensatz zum Adam Optimierer hat der SFO einen linearen Speicherbedarf in der Anzahl der Minibatch-Partitionen eines Datensatzen. Das wäre auf speicherbeschränkten Systemen, wie zum Beispiel einer GPU meist nicht möglich durchzuführen.\n",
         "\n",
-        "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird [Graves, 2013](https://arxiv.org/abs/1308.0850). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [siehe 6.4]\n",
+        "Bei RMSProp (Root Mean Square Propagation) handelt es sich um einen Optimierer, der eng mit dem Adam Optimierer verwandt ist. Es kann auch vorkommen, dass eine Version mit Momentum eingesetzt wird [Graves, 2013](#q-graves-2014). Wird nun RMSProp mit Momentum eingesetzt, so werden die Parameteraktualisierungen anhand eines Momentums auf dem neu skalierten Gradienten generiert. Der Adam Optimierer hingegen werden die Aktualisierungen anhand eines Durchschnitts des ersten und zweiten Momentums des Gradienten geschätzt. Ein weiterer Nachteil bei RMSProp ist das nicht vorhandensein eines Bias Korrekturbegriffs. Dieser wäre notwendig, wenn ein Wert von $\\beta _{2}$ nahe dem Wert eins (1) ist, da in diesem Fall eine Nichtkorrektur der Verzerrung zu sehr großen Schrittweiten führen kann, woraus sich in der Folge eine Divergenz entwickeln kann. [Diederik et al., 2017, S. 5,8](#q-diederik-adam) [siehe 6.4]\n",
         "RMSProp wurde zeitgleich mit dem Optimierer Adadelta entwickelt, allerdings unabhängig davon. RMSProp war zumindest 2016 noch nicht veröffentlich. Beide teilen sich allerdings den gleichen Update-Vektor:\n",
         "$$E[g^2]_t = 0.9E[g^2]_{t-1}+0.1g^2_t$$\n",
         "$$\\theta_{t+1}=\\theta_t-\\frac{\\eta}{\\sqrt{E[g^2]_t+\\varepsilon}}g_t$$\n",
         "\n",
-        "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Größere Aktualisierungen werden für Parameter durchgeführt, die mit seltenen Features verbunden sind. [https://ruder.io/optimizing-gradient-descent/index.html#adagrad];([Jeffrey Dean, Greg S. Corrado, Rajat Monga, Kai Chen, Matthieu Devin, Quoc V. Le, Mark Z. Mao, Marc’Aurelio Ranzato, Andrew Senior, Paul Tucker, Ke Yang, Andrew Y. Ng](http://papers.nips.cc/paper/4687-large-scale-distributed-deep-networks.pdf))\n"
+        "Der AdaGrad Algorithmus passt die Lernrate an die Parameter an und führt kleiner Aktualisierungen für Parameter durch, die mit häufig auftretenden Features verbunden sind. Größere Aktualisierungen werden für Parameter durchgeführt, die mit seltenen Features verbunden sind. [Ruder, 2016](#q-ruder-2016); [Dean et al., 2012](#q-dean-et-al-2012)\n"
       ]
     },
     {
@@ -1821,7 +1821,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "13. <style type=\"text/css\">\n",
+        "13. <a id=\"q-ruder-2016\" name=\"q-ruder-2016\"></a> <style type=\"text/css\">\n",
         ".tg  {border-collapse:collapse;border-spacing:0;}\n",
         ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
         "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
@@ -1900,7 +1900,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "15. <style type=\"text/css\">\n",
+        "15. <a id=\"q-graves-2014\" name=\"q-graves-2014\"></a> <style type=\"text/css\">\n",
         ".tg  {border-collapse:collapse;border-spacing:0;}\n",
         ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
         "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
@@ -2246,11 +2246,51 @@
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Source:</td>\n",
-        "    <td class=\"tg-swfa\"><a href=\"https://panzhous.github.io/assets/pdf/2020-NIPS-SGD-poster.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">https://panzhous.github.io/assets/pdf/2020-NIPS-SGD-poster.pdf</a>; <a href=\"https://panzhous.github.io/#2020\">(https://panzhous.github.io/#2020)</a></td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"https://panzhous.github.io/assets/pdf/2020-NIPS-SGD-poster.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">https://panzhous.github.io/assets/pdf/2020-NIPS-SGD-poster.pdf</a>;<br><a href=\"https://panzhous.github.io/#2020\">(https://panzhous.github.io/#2020)</a></td>\n",
         "  </tr>\n",
         "  <tr>\n",
         "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
         "    <td class=\"tg-zv4m\">16. Dezember 2022</td>\n",
+        "  </tr>\n",
+        "</tbody>\n",
+        "</table>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "23. <a id=\"q-dean-et-al-2012\" name=\"q-kaur-2022\"></a> <style type=\"text/css\">\n",
+        ".tg  {border-collapse:collapse;border-spacing:0;}\n",
+        ".tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;\n",
+        "  font-weight:normal;overflow:hidden;padding:5px 5px;word-break:normal;}\n",
+        ".tg .tg-zv4m{border-color:#ffffff;text-align:left;vertical-align:top}\n",
+        ".tg .tg-swfa{border-color:#ffffff;color:#0055ff;text-align:left;vertical-align:top}\n",
+        "</style>\n",
+        "<table class=\"tg\">\n",
+        "<tbody>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Title:</td>\n",
+        "    <td class=\"tg-zv4m\">Large Scale Distributed Deep Networks</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Authors:</td>\n",
+        "    <td class=\"tg-zv4m\">Jeffrey Dean, Greg S. Corrado, Rajat Monga, Kai Chen, Matthieu Devin, Quoc V. Le, Mark Z. Mao, Marc’Aurelio Ranzato, Andrew Senior, Paul Tucker, Ke Yang, Andrew Y. Ng</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Date:</td>\n",
+        "    <td class=\"tg-zv4m\">2012</td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Source:</td>\n",
+        "    <td class=\"tg-swfa\"><a href=\"https://proceedings.neurips.cc/paper/2012/file/6aca97005c68f1206823815f66102863-Paper.pdf\" target=\"_blank\" rel=\"noopener noreferrer\">https://proceedings.neurips.cc/paper/2012/file/6aca97005c68f1206823815f66102863-Paper.pdf</a>;<br><a href=\"https://proceedings.neurips.cc/papers/search?q=large+scale+distributed+deep+networks\">(https://proceedings.neurips.cc/papers/search?q=large+scale+distributed+deep+networks)</a></td>\n",
+        "  </tr>\n",
+        "  <tr>\n",
+        "    <td class=\"tg-zv4m\">Zuletzt aufgerufen am:</td>\n",
+        "    <td class=\"tg-zv4m\">18. Dezember 2022</td>\n",
         "  </tr>\n",
         "</tbody>\n",
         "</table>"
