--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -154,6 +154,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "---"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Abkürzungsverzeichnis <a name=\"abkuerzungsverzeichnis\"></a>\n",
         "\n",
         "| Abkürzung | Bedeutung          |\n",
@@ -189,6 +197,14 @@
         "| $\\delta$  |         | Gradient |\n",
         "| $t$  | Zeiteinheit (beliebige Größe) | Zeit |\n",
         "| $\\epsilon$  |         | Konstante |"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "---"
       ]
     },
     {
