--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -608,6 +608,14 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "---"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# Quellen <a name=\"quellen\" id=\"quellen\"></a>"
       ]
     },
