--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -1274,9 +1274,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Adam ist einer der Standard-Algorithmen, wenn es darum geht, adaptive Gradientenmethoden in Deep-Learning einzusetzen [Tang et al., 2019, S. 1f](#q-tang-et-al-2019). Jedoch zeigt sich, dass der Adam Optimierer und weitere adaptive Optimierungsmethoden im Vergleich mit dem stochastischen Gradientenabstieg (SGD) nicht so gut generalisieren.\n",
-        "Das heißt, dass der Optimierer bei Trainingsdaten meist ganz gut abschneidet, allerdings bei Testdaten der stochastische Gradientenabstieg (SGD) bessere Ergebnisse liefert.\n",
-        "Im Vergleich zu SGD schneidet ADAM ein bis zwei Prozent schlechter bei den Trainingsdaten ab. Das liegt an einer größeren Generalisierungslücke von Adam im Vergleich zu SGD [Tang et al., 2019, S. 1f](#q-tang-et-al-2019).\n",
+        "Adam ist einer der Standard-Algorithmen, wenn es darum geht, adaptive Gradientenmethoden in Deep-Learning einzusetzen [Tang et al., 2019, S. 1f](#q-tang-et-al-2019). Jedoch zeigt sich, dass der Adam Optimierer und weitere adaptive Optimierungsmethoden im Vergleich mit dem stochastischen Gradientenabstieg (SGD) nicht so gut generalisieren. Als Generalisierung wird die Übertragung der aus den Trainingsdaten gefundenen Erkenntnisse auf Realdaten bezeichnet. \n",
+        "Adam schneidet bei Trainingsdaten gut ab. Bei Testdaten liefert jedoch SGD bessere Ergebnisse. Der Leistungsunterschied zwischen SGD und Adam, die Generalisierungslücke genannt, liegt bei zwei Prozent[Tang et al., 2019, S. 1f](#q-tang-et-al-2019).\n",
         "\n",
         "![image.png](attachment:image.png)\n",
         "\n",
@@ -1296,7 +1295,7 @@
         "- **Unter Umständen zu geringe Lernrate**  \n",
         "  Wenn Adam mit einer zu niedrigen Lernrate konfiguriert wird, kommt es zu keiner effektiven Konvergenz. Dadurch findet Adam nicht den richtigen Pfand, wodurch der Optimierer zu einem supotimalen Punkt konvergiert.\n",
         "- **Unter Umständen stark steigende Lernrate**  \n",
-        "  Tritt dieser Fall ein, so wirkt sich das stark auf die Leistung des Algorithmus aus.\n",
+        "  Um zu konvergieren erhöht Adam manchmal die Lernrate. Tritt dieser Fall ein, so wirkt sich das negativ auf die Leistung des Algorithmus aus.\n",
         "\n",
         "Allerdings können die Grenzen von ADAM durch Einsatz der Strategie SWATS überwunden werden. Nitish Shirish Keskar und Richard Socher haben untersucht, wie die Generalisierungsleistung durch den Wechsel von ADAM zu SGD verbessert werden kann [Bushaev, 2018, Problems with Adam](#q-bushaev-2018). Im dazugehörigen Paper wird die SWATS Strategie vorgestellt, was so viel bedeutet wie \"**Sw** from **A**dam **t**o **S**GD\". Das heißt, dass nur zu SGD gewechselt wird, wenn eine Bedingung eintritt [Keskar et al., 2020, S. 2ff](#q-keskar-et-al-2020).\n",
         "Die Bedingung ist folgendermaßen aufgebaut:\n",
@@ -1343,6 +1342,17 @@
       "metadata": {},
       "source": [
         "# Fazit <a name=\"fazit\" id=\"fazit\"></a>"
+      ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Der Adam Optimierer kombiniert die positiven Eigenschaften von AdaGrad und RMSProb. Also die effiziente Verarbeitung von \"Sparse Gradients\" von AdaGrad und die gute Performance in nicht stationären Umgebungen von RMSProb. Adam hat unter Verwendung der Standardparameter eine gute Performance und Geschwindigkeit und kann mit \"Sparse Gradients\" umgehen. \n",
+        "Leider ist die Generalisierungsfähigkeit von Adam geringer als das Standardverfahren SGD. Das liegt primär an der, im Vergleich zu SGD, ungleichen Skalierung der Gradienten. Außerdem leidet die Leistung von Adam sehr stark an zu gering gewählten Lernraten, wodurch Adam zu supoptimalen Punkten konvergiert. Diese Nachteile können durch eine Kombination aus Adam und SGD umgangen werden. Die SWATS Strategie verwendet Adam am Anfang für Optimierungen und wechselt später zu SGD für eine bessere Leistung des trainierten Modells auf Realdaten.\n",
+        "\n",
+        "Der Adam Optimierer ist ein guter Standard Optimierer, welcher in vielen Situationen angewandt werden kann. Jedoch sollten Nutzern die Limitierungen von Adam bekannt sein, um bestmögliche Ergebnisse zu erzielen. Im Zweifelsfall bietet sich eine Kombination mit SGD (SWATS Strategie) oder ein alleiniges Verwenden von SGD für die beste Leistung des trainierten Modells an."
       ]
     },
     {
