--- a/ML_ADAM.ipynb
+++ b/ML_ADAM.ipynb
@@ -7,7 +7,7 @@
       "source": [
         "## Verwendete Python Bibliotheken: <a name=\"verwendete-python-bibs\"></a>\n",
         "- Vorraussetzung: Pip Paketmanager\n",
-        "- Pakete können durch Ausführen des Notebook-Code-Blocks durchgeführt werden"
+        "- Paketinstallationen können durch Ausführen des Notebook-Code-Blocks durchgeführt werden"
       ]
     },
     {
@@ -69,50 +69,6 @@
       "source": [
         "## Stochastische Optimierung: ADAM <a name=\"stochastische-optimierung-adam\"></a>\n",
         "\n"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pmPCDfYTKLo7"
-      },
-      "source": [
-        "Links:\n",
-        "* https://github.com/mrhashemi/Optimizers/blob/main/adam_bfgs_optimization.ipynb\n",
-        "* https://towardsdatascience.com/how-to-implement-an-adam-optimizer-from-scratch-76e7b217f1cc\n",
-        "* https://pub.towardsai.net/why-adam-optimizer-should-not-be-the-default-learning-algorithm-a2b8d019eaa0\n",
-        "* https://www.deeplearningwizard.com/deep_learning/boosting_models_pytorch/optimizers/#optimization-algorithm-4-adam\n",
-        "* https://machinelearningmastery.com/adam-optimization-from-scratch/\n",
-        "* https://github.com/theroyakash/Adam\n",
-        "* https://youtu.be/6nqV58NA_Ew\n",
-        "* https://optimization.cbe.cornell.edu/index.php?title=Adam\n",
-        "* https://deepai.org/machine-learning-glossary-and-terms/adam-machine-learning\n",
-        "* https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwiv3ve_lOf7AhUFG-wKHQZ1D7IQFnoECCkQAQ&url=https%3A%2F%2Farxiv.org%2Fpdf%2F1412.6980&usg=AOvVaw3A1FgD6VpF0vPpG6_b5gbf\n",
-        "* https://keras.io/api/optimizers/\n",
-        "* https://pythonguides.com/adam-optimizer-pytorch/\n",
-        "* https://www.datarobot.com/blog/introduction-to-optimizers/\n",
-        "* https://towardsdatascience.com/a-visual-explanation-of-gradient-descent-methods-momentum-adagrad-rmsprop-adam-f898b102325c\n",
-        "* https://ruder.io/optimizing-gradient-descent/index.html#adagrad"
-      ]
-    },
-    {
-      "attachments": {},
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "gGSCXODy67Jl"
-      },
-      "source": [
-        "# Inhaltsverzeichnis (alt)\n",
-        "\n",
-        "*   Was sind Optimizer und wofür werden diese eingesetzt?\n",
-        "*   Erläuterung anhand anschaulicher Beispiele\n",
-        "*   Effekte des Adam Optimizers\n",
-        "*   Einsatzbereich\n",
-        "*   Limitierungen\n",
-        "*   Hinweis auf Alternativen und Abgrenzung\n",
-        "*   Fazit\n",
-        "*   Quellen"
       ]
     },
     {
@@ -2385,7 +2341,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
